Cleans up otel extension and adds run configuration + steps